--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DOM Interaction</title>
+    <link rel="stylesheet" href="style.css" />
     <script src="app.js" defer></script>
   </head>
   <body>
-    <h1 id="main-title">Dive into the DOM!</h1>
-    <ul>
-      <li class="list-item">Item 1</li>
-      <li class="list-item">Item 2</li>
-      <li class="list-item">Item 3</li>
-    </ul>
+    <header>
+      <h1 id="main-title">Dive into the DOM!</h1>
+    </header>
+
+    <section class="red-bg">
+      <ul>
+        <li class="list-item">Item 1</li>
+        <li class="list-item">Item 2</li>
+        <li class="list-item">Item 3</li>
+      </ul>
+    </section>
+
+    <input type="text" value="default text" />
   </body>
 </html>
