--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       <h1 id="main-title">Dive into the DOM!</h1>
     </header>
 
-    <section class="red-bg">
+    <section class="red-bg visible">
       <ul>
         <li class="list-item">Item 1</li>
         <li class="list-item">Item 2</li>
         <li class="list-item">Item 3</li>
       </ul>
     </section>
-
-    <input type="text" value="default text" />
+    <button>Toggle Visibility</button>
+    <input title="input" type="text" value="default text" />
   </body>
 </html>
