--- a/index.html
+++ b/index.html
@@ -4,23 +4,52 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DOM Interaction</title>
+    <title>Favorite Movies</title>
     <link rel="stylesheet" href="style.css" />
     <script src="app.js" defer></script>
   </head>
   <body>
+    <div id="backdrop"></div>
+    <div class="modal" id="add-modal">
+      <div class="modal__content">
+        <label for="title">Movie Title</label>
+        <input type="text" name="title" id="title" />
+        <label for="image-url">Image URL</label>
+        <input type="text" name="image-url" id="image-url" />
+        <label for="rating">Your Rating</label>
+        <input
+          type="number"
+          step="1"
+          max="5"
+          min="1"
+          name="rating"
+          id="rating"
+        />
+      </div>
+      <div class="modal__actions">
+        <button class="btn btn--passive">Cancel</button>
+        <button class="btn btn--success">Add</button>
+      </div>
+    </div>
+    <div class="modal" id="delete-modal">
+      <h2 class="modal__title">Are you sure?</h2>
+      <p class="modal__content">
+        Are you sure you want to delete this item? This action can't be undone!
+      </p>
+      <div class="modal__actions">
+        <button class="btn btn--passive">Cancel</button>
+        <button class="btn btn--danger">Yes</button>
+      </div>
+    </div>
     <header>
-      <h1 id="main-title">Dive into the DOM!</h1>
+      <h1>Favorite Movies</h1>
+      <button>ADD MOVIE</button>
     </header>
-
-    <section class="red-bg visible">
-      <ul>
-        <li class="list-item">Item 1</li>
-        <li class="list-item">Item 2</li>
-        <li class="list-item">Item 3</li>
-      </ul>
-    </section>
-    <button>Toggle Visibility</button>
-    <input title="input" type="text" value="default text" />
+    <main>
+      <section id="entry-text" class="card">
+        <p>Your personal movie datavase!</p>
+      </section>
+      <ul id="movie-list"></ul>
+    </main>
   </body>
 </html>
